[tool.poetry]
name = "behance-parser"
version = "0.1.0"
description = ""
authors = ["nuclearthinking <onifent@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.3.0"
webdriver-manager = "^3.8.2"
requests = "^2.28.1"
pydantic = "^1.9.1"
beautifulsoup4 = "^4.11.1"
SQLAlchemy = "^1.4.39"
click = "^8.1.3"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
behance-parser = 'app:cli'